* important changes in version 1.32 24/5/2007:
-   Make Archive::Tar work nicely with perls compiled with 
    -Dmksymlinks. This also fixes an issue introduced in 
    1.31 where symlinks weren't dereferenced in all cases.
-   Quell warnings when a gid is not resolvable to a group name  

* important changes in version 1.31 18/5/2007:
-   No longer use the t/setup.t and t/cleanup.t files but just bundle 
    the binary files; this was done for core integration, but the new 
    uupacktool.pl script means we dont have to do this anymore
_   Apply core perl Change 30997 by rgs@stcosmo on 2007/04/20 15:03:57
-   Address: #27124: Unneeded warning sent when checking for file
    inclusion contains_file() will no longer warn to STDERR when a file 
    is not contained in an archive and $WARN is set to 'true'.
-   Address #26492: Dangling symlinks not preserved: Archive::Tar used 
    to complain about dangling symlinks, unlike standard gnu tar, which 
    would add them silently. This patch brings A::T's behaviour in line 
    with gnu tar
-   Minor pod fixes

* important changes in version 1.30 8/2/2006:
-   applied bleadperl patch: Subject: Change 27416: 
    Cleanup Archive-Tar temporary test files
-   address #17985: INSTALLDIRS needs to be 'perl' for >= perl-5.9.3
-   address #18296: Archive::Tar 1.29 PATCH for VMS to fix test case 
    failure in 99_pod.t
    (it's actually a File::Find bug, but this patch works around that)
-   address: #18720 ([PATCH] Archive::Tar creates POSIX style tar files
    unnecessarily and by default, leading to compatibility problems 
    particularly with WinZip.)
    patch rejected, docpatch added with FAQ and SEE ALSO
-   apply performance patch from #20399 to enable the user to
    avoid repeated calls to cwd() if desired.

* important changes in version 1.29 3/1/2006:
-   integrate bleadperl patches to generate the source files for
    testing, rather than bundling them
-   make extract* methods accept a::t::file objects too    